[package]
name = "loci"
version = "0.1.0"
authors = ["jerry <jerry@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
futures = "0.3.13"
libc = "0.2.88"
nix = "0.20.0"
clap = "2.33.3"
async-trait = "0.1.48"
log = "0.4.0"
env_logger = "0.8.3"