[package]
name = "server"
version = "0.1.0"
authors = ["jerry <jerry.jia@dhms.com.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
futures = "0.3.13"
log = "0.4.0"
env_logger = "0.8.3"
hyper = { version = "0.14", default-features = false, features = ["stream", "client", "server", "http1", "tcp"] }